@@ -1,6 +1,9 @@
 v3.10.1 (XXXX-XX-XX)
 --------------------
 
+* Log the documents counts on leader and follower shards at the end of each
+  successful shard synchronization.
+
 * Remove superfluous dash character from startup option name
   `--temp.-intermediate-results-encryption-hardware-acceleration`.
 
